# yamlify

./: .gitignore  CHANGELOG.md  MAINTAINERS.md  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
src/datify/: __init__.py  convert.py
src/yamlify/: __init__.py  data.py  main.py
tests/: test_convert.py  test_main.py  test_merge.py  test_yaml_loader.py
tests/data/cars/: 00001.yaml  00002.yaml  00003.yaml
tests/data/persons/: jane.yaml  john.yaml
tests/modules/: link_refs.py
tests/templates/: structure.j2  template_linked.j2  template_multi.j2  template_recursive.j2  template_single.j2
